--- a/app.json
+++ b/app.json
@@ -1,11 +1,40 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/login/login",
+    "pages/personal/personal",
+    "pages/index/index",
+    "pages/video/video"
+    
   ],
   "window": {
     "navigationBarBackgroundColor": "#FF3A3A",
     "navigationBarTextStyle": "white",
     "navigationBarTitleText": "云音乐"
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "tabBar": {
+    "color": "#333",
+    "selectedColor": "d43c33",
+    "backgroundColor": "#ffffff",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "主页",
+        "iconPath": "/static/images/tabs/tab-home.png",
+        "selectedIconPath": "/static/images/tabs/tab-home-current.png"
+      },
+      {
+        "pagePath": "pages/video/video",
+        "text": "视频",
+        "iconPath": "/static/images/tabs/tab-cate.png",
+        "selectedIconPath": "/static/images/tabs/tab-cate-current.png"
+      },
+      {
+        "pagePath": "pages/personal/personal",
+        "text": "个人中心",
+        "iconPath": "/static/images/tabs/tab-my.png",
+        "selectedIconPath": "/static/images/tabs/tab-my-current.png"
+      }
+    ]
+  }
 }
