--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "pages": [
+    "pages/songDetail/songDetail",
+    "pages/recommendSong/recommendSong",
+    "pages/index/index",
     "pages/video/video",
     "pages/personal/personal",
-    "pages/login/login",
-    "pages/index/index"
-    
-    
+    "pages/login/login"
+   
   ],
   "window": {
     "navigationBarBackgroundColor": "#FF3A3A",
