--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
   "pages": [
-    "pages/songDetail/songDetail",
-    "pages/recommendSong/recommendSong",
     "pages/index/index",
+    "pages/recommendSong/recommendSong",
+    "pages/songDetail/songDetail",
     "pages/video/video",
     "pages/personal/personal",
-    "pages/login/login"
-   
+    "pages/login/login",
+    "pages/search/search",
+    "pages/recommendList/recommendList"
   ],
   "window": {
     "navigationBarBackgroundColor": "#FF3A3A",
@@ -38,5 +39,8 @@
         "selectedIconPath": "/static/images/tabs/tab-my-current.png"
       }
     ]
-  }
+  },
+  "requiredBackgroundModes": [
+    "audio"
+  ]
 }
